asd: batch changes (2025-08-30 23:26)

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 ﻿{
-  "SiteName": "My ASD Site",
+  "SiteName": "Vape House",
   "StoreUrl": "https://example.com/",
   "Description": "Clean static sites with ASD.",
-  "BaseUrl": "https://maestro-uchiha.github.io/my-new-asd-site/",
+  "BaseUrl": "https://vapehouse.helioho.st/",
   "author": { "name": "Maestro" }
 }
